--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 github
 results/endovis_2018/
 external_libs
+datasets/surgvu/frames
 utils/_temp.py
 __dino_loss.py
 copy_files.sh
@@ -34,7 +35,6 @@ runs
 d.sh
 exps
 main_debug.py
-vissl/*
 *.jpg
 *.txt
 *.mp4
