--- a/configs/config/hparams/surgvu/pre_training/moco.yaml
+++ b/configs/config/hparams/surgvu/pre_training/moco.yaml
@@ -4,7 +4,7 @@ config:
   FEATURE_EXTRACTION: False
   FEATURE_EXTRACT: Trunk
   ID: 1
-  TAG: surgvu_moco_${SLURM_JOB_ID:-local}
+  TAG: "surgvu_moco_${oc.env:SLURM_JOB_ID,local}"
   VERBOSE: False
   LOG_FREQUENCY: 30
   TEST_ONLY: False
@@ -19,7 +19,7 @@ config:
     NUM_CLASSES_PHASE: 8
     LABEL_TOOL_OR_PHASE: Phase
     TRAIN:
-      DATA_PATHS: [${PLG_GROUPS_STORAGE}/plgg_13/surgvu_data/train]
+      DATA_PATHS: ["${env:PLG_GROUPS_STORAGE}/plgg_13/surgvu_data/train"]
       LABEL_PATHS: [./datasets/surgvu/labels/train.pkl]
       DATA_SOURCES: [disk_filelist_surgvu]
       LABEL_SOURCES: [disk_filelist_surgvu]
@@ -60,56 +60,6 @@ config:
       COPY_TO_LOCAL_DISK: False
       DATA_LIMIT: -1
       DROP_LAST: True
-    TEST:
-      DATA_PATHS: [${PLG_GROUPS_STORAGE}/plgg_13/surgvu_data/test]
-      LABEL_PATHS: [./datasets/surgvu/labels/test.pkl]
-      DATA_SOURCES: [disk_filelist_surgvu]
-      LABEL_SOURCES: [disk_filelist_surgvu]
-      DATASET_NAMES: [surgvu_dataset]
-      BATCHSIZE_PER_REPLICA: 64
-      LABEL_TYPE: standard
-      TRANSFORMS:
-        - name: CropSides
-          crop_left: 200
-          crop_right: 200
-          crop_top: 50
-          crop_bottom: 50
-        - name: Resize
-          size: [224, 399]
-        - name: ToTensor
-        - name: Normalize
-          mean: [0.485, 0.456, 0.406]
-          std: [0.229, 0.224, 0.225]
-      MMAP_MODE: True
-      COPY_TO_LOCAL_DISK: False
-      DATA_LIMIT: -1
-      DROP_LAST: False
-    VAL:
-      DATA_PATHS: [${PLG_GROUPS_STORAGE}/plgg_13/surgvu_data/val]
-      LABEL_PATHS: [./datasets/surgvu/labels/val.pkl]
-      DATA_SOURCES: [disk_filelist_surgvu]
-      LABEL_SOURCES: [disk_filelist_surgvu]
-      DATASET_NAMES: [surgvu_dataset]
-      BATCHSIZE_PER_REPLICA: 64
-      LABEL_TYPE: standard
-      TRANSFORMS:  
-        - name: CropSides
-          crop_left: 200
-          crop_right: 200
-          crop_top: 50
-          crop_bottom: 50 
-        - name: Resize
-          size: [224, 399]
-        - name: ToTensor
-        - name: Normalize
-          mean: [0.485, 0.456, 0.406]
-          std: [0.229, 0.224, 0.225]
-      MMAP_MODE: True
-      COPY_TO_LOCAL_DISK: False
-      DATA_LIMIT: -1
-      DROP_LAST: False
-  TRAINER:
-    TRAIN_STEP_NAME: custom_train_step_surgery
   METERS:
     name: ""
   MODEL:
@@ -151,7 +101,7 @@ config:
       temperature: 0.2
   OPTIMIZER:
       name: sgd
-      use_larc: True
+      use_larc: False
       larc_config:
         clip: False
         trust_coefficient: 0.001
@@ -182,22 +132,22 @@ config:
   DISTRIBUTED:
     BACKEND: nccl
     NUM_NODES: 1
-    NUM_PROC_PER_NODE: 4
+    NUM_PROC_PER_NODE: 2
     INIT_METHOD: tcp
     RUN_ID: auto
   MACHINE:
     DEVICE: gpu
   CHECKPOINT:
-    DIR: "${SCRATCH}/surgvu_results/pretraining/moco/job_${SLURM_JOB_ID:-local}/"
+    DIR: "<SET_ME>"
     AUTO_RESUME: True
     CHECKPOINT_FREQUENCY: 10
     OVERWRITE_EXISTING: False
   HOOKS:  
     TENSORBOARD_SETUP:
       USE_TENSORBOARD: True
-      EXPERIMENT_LOG_DIR: "${SCRATCH}/surgvu_results/pretraining/moco/job_${SLURM_JOB_ID:-local}/logs/"
+      EXPERIMENT_LOG_DIR: "<SET_ME>"
       FLUSH_EVERY_N_MIN: 20
       LOG_PARAMS: True
       LOG_PARAMS_GRADIENTS: True
       LOG_PARAMS_EVERY_N_ITERS: -1
-  RUN_DIR: "${SCRATCH}/surgvu_results/pretraining/moco/job_${SLURM_JOB_ID:-local}/"      
+  RUN_DIR: "<SET_ME>"
