--- a/configs/config/hparams/surgvu/finetuning/imagenet_to_surgvu/100/imagenet_fully_supervised.yaml
+++ b/configs/config/hparams/surgvu/finetuning/imagenet_to_surgvu/100/imagenet_fully_supervised.yaml
@@ -1,13 +1,14 @@
 # surgvu_imagenet_supervised_finetuning_phase_100_0 (Fully supervised ImageNet baseline)
 
 config:
+  FEATURE_EXTRACTION: False
   ID: 1
   TAG: surgvu_imagenet_supervised_finetuning_phase_100_0_${SLURM_JOB_ID:-local}
   VERBOSE: False
-  LOG_FREQUENCY: 1
+  LOG_FREQUENCY: 10
   TEST_ONLY: False
   TEST_MODEL: True
-  TEST_EVERY_NUM_EPOCH: 6
+  TEST_EVERY_NUM_EPOCH: 10 # how often to test the model during training (in epochs) - validation
   FEATURE_EXTRACT: Head
   SEED_VALUE: 0
   MULTI_PROCESSING_METHOD: forkserver
@@ -19,8 +20,8 @@ config:
     NUM_CLASSES_PHASE: 8
     LABEL_TOOL_OR_PHASE: Phase
     TRAIN:
-      DATA_PATHS: ["${env:PLG_GROUPS_STORAGE}/plgg_13/surgvu_data/train"]
-      LABEL_PATHS: [./datasets/surgvu/labels/train.pkl]
+      DATA_PATHS: ["/net/tscratch/people/plgjmachali/surgvu_data_sampled_03/train"]
+      LABEL_PATHS: ["/net/pr2/projects/plgrid/plgg_13/sources/SelfSupSurg/datasets/surgvu/labels/0_3fps/train.pkl"]
       DATA_SOURCES: [disk_filelist_surgvu]
       LABEL_SOURCES: [disk_filelist_surgvu]
       DATASET_NAMES: [surgvu_dataset]
@@ -32,8 +33,8 @@ config:
           crop_right: 200
           crop_top: 50
           crop_bottom: 50
-        - name: Resize
-          size: [224, 399]
+        - name: Resize # TODO match with surgvu
+          size: 256
         - name: RandAugmentSurgery
           magnitude: 8.0
           magnitude_std: 0.5
@@ -55,8 +56,8 @@ config:
       DATA_LIMIT: -1
       DROP_LAST: True
     VAL:
-      DATA_PATHS: ["${env:PLG_GROUPS_STORAGE}/plgg_13/surgvu_data/val"]
-      LABEL_PATHS: [./datasets/surgvu/labels/val.pkl]
+      DATA_PATHS: ["/net/tscratch/people/plgjmachali/surgvu_data_sampled_03/val"]
+      LABEL_PATHS: [/net/pr2/projects/plgrid/plgg_13/sources/SelfSupSurg/datasets/surgvu/labels/0_3fps/val.pkl]
       DATA_SOURCES: [disk_filelist_surgvu]
       LABEL_SOURCES: [disk_filelist_surgvu]
       DATASET_NAMES: [surgvu_dataset]
@@ -68,8 +69,8 @@ config:
           crop_right: 200
           crop_top: 50
           crop_bottom: 50
-        - name: Resize
-          size: [224, 399]
+        - name: Resize # TODO match with surgvu
+          size: 256
         - name: ToTensor
         - name: Normalize
           mean: [0.485, 0.456, 0.406]
@@ -79,8 +80,8 @@ config:
       DATA_LIMIT: -1
       DROP_LAST: False
     TEST:
-      DATA_PATHS: ["${env:PLG_GROUPS_STORAGE}/plgg_13/surgvu_data/test"]
-      LABEL_PATHS: [./datasets/surgvu/labels/test.pkl]
+      DATA_PATHS: ["/net/tscratch/people/plgjmachali/surgvu_data_sampled_03/test"]
+      LABEL_PATHS: [/net/pr2/projects/plgrid/plgg_13/sources/SelfSupSurg/datasets/surgvu/labels/0_3fps/test.pkl]
       DATA_SOURCES: [disk_filelist_surgvu]
       LABEL_SOURCES: [disk_filelist_surgvu]
       DATASET_NAMES: [surgvu_dataset]
@@ -92,8 +93,8 @@ config:
           crop_right: 200
           crop_top: 50
           crop_bottom: 50
-        - name: Resize
-          size: [224, 399]
+        - name: Resize # TODO match with surgvu
+          size: 256
         - name: ToTensor
         - name: Normalize
           mean: [0.485, 0.456, 0.406]
@@ -103,7 +104,8 @@ config:
       DATA_LIMIT: -1
       DROP_LAST: False
   METERS:
-    name: accuracy_list_meter
+    # names: [accuracy_list_meter, mean_ap_list_meter, precision_at_k_list_meter, recall_at_k_list_meter]
+    names: [accuracy_list_meter]
     accuracy_list_meter:
       num_meters: 1
       topk_values: [1]
@@ -133,25 +135,21 @@ config:
   LOSS:
     name: cross_entropy_multiple_output_single_target
     cross_entropy_multiple_output_single_target:
+      weight: [0.1837, 1.0780, 1.8447, 2.1849, 3.3616, 5.2008, 13.9199, 14.8251]
       ignore_index: -1
   OPTIMIZER:
       name: sgd
-      use_larc: False
-      larc_config:
-        clip: False
-        trust_coefficient: 0.001
-        eps: 0.00000001
       weight_decay: 0.000001
       momentum: 0.9
       nesterov: False
-      num_epochs: 30
+      num_epochs: 120
       regularize_bn: True
       regularize_bias: True
       param_schedulers:
         lr:
           auto_lr_scaling:
             auto_scale: true
-            base_value: 0.1
+            base_value: 0.005
             base_lr_batch_size: 256
           name: composite
           schedulers:
@@ -175,7 +173,7 @@ config:
   CHECKPOINT:
     DIR: "${SCRATCH}/surgvu_results/finetuning/imagenet_to_surgvu/series_01/test/phase/100/0/checkpoints_${SLURM_JOB_ID:-local}"
     AUTO_RESUME: True
-    CHECKPOINT_FREQUENCY: 30
+    CHECKPOINT_FREQUENCY: 10
     OVERWRITE_EXISTING: False
   HOOKS:
     TENSORBOARD_SETUP:
