--- a/configs/config/hparams/surgvu/pre_training/simclr.yaml
+++ b/configs/config/hparams/surgvu/pre_training/simclr.yaml
@@ -2,8 +2,9 @@
 # SLURM environment with SCRATCH directory structure
 
 config:
+  FEATURE_EXTRACTION: False
   ID: 1
-  TAG: "surgvu_moco_${oc.env:SLURM_JOB_ID,local}"
+  TAG: "surgvu_simclr_${oc.env:SLURM_JOB_ID,local}"
   VERBOSE: False
   LOG_FREQUENCY: 30
   TEST_ONLY: False
@@ -14,13 +15,14 @@ config:
   PERF_STAT_FREQUENCY: 10
   ROLLING_BTIME_FREQ: 10
   DATA:
-    NUM_DATALOADER_WORKERS: 6
+    NUM_DATALOADER_WORKERS: 8  # Keep per GPU
     NUM_CLASSES_PHASE: 8
     LABEL_TOOL_OR_PHASE: Phase
     TRAIN:
-      DATA_PATHS: ["${env:PLG_GROUPS_STORAGE}/plgg_13/surgvu_data/train"]
-      LABEL_PATHS: [./datasets/surgvu/labels/train.pkl]
+      DATA_PATHS: ["/net/tscratch/people/plgjmachali/surgvu_data_sampled_03/train"]
+      LABEL_PATHS: [/net/pr2/projects/plgrid/plgg_13/sources/SelfSupSurg/datasets/surgvu/labels/0_3fps/train.pkl]
       DATA_SOURCES: [disk_filelist_surgvu]
+      LABEL_SOURCES: [disk_filelist_surgvu]
       DATASET_NAMES: [surgvu_dataset]
       BATCHSIZE_PER_REPLICA: 64
       LABEL_TYPE: sample_index
@@ -30,8 +32,8 @@ config:
           crop_right: 200
           crop_top: 50
           crop_bottom: 50
-        - name: Resize
-          size: [252, 448]
+        - name: Resize # TODO match with surgvu
+          size: 256
         - name: ImgPilToMultiCrop
           total_num_crops: 2
           size_crops: [224, 224]
@@ -53,7 +55,7 @@ config:
         - name: Normalize
           mean: [0.485, 0.456, 0.406]
           std: [0.229, 0.224, 0.225]
-      COLLATE_FUNCTION: multicrop_simclr_collator
+      COLLATE_FUNCTION: multicrop_collator
       MMAP_MODE: True
       COPY_TO_LOCAL_DISK: False
       DATA_LIMIT: -1
@@ -66,35 +68,31 @@ config:
       RESNETS:
         DEPTH: 50
         WIDTH_MULTIPLIER: 1
-      REGNET:
-        depth: 18
-        w_0: 200
-        w_a: 106.23
-        w_m: 2.48
-        group_width: 112
     HEAD:
       PARAMS: [
         ["mlp", {"dims": [2048, 2048], "use_bn": True, "use_relu": True, "skip_last_layer_relu_bn": False}],
         ["mlp", {"dims": [2048, 256]}],
-      ]      
+        ["mlp", {"dims": [256, 4096]}],
+      ]
     SYNC_BN_CONFIG:
       CONVERT_BN_TO_SYNC_BN: True
-      SYNC_BN_TYPE: pytorch     
+      SYNC_BN_TYPE: pytorch
       GROUP_SIZE: -1
     AMP_PARAMS:
       USE_AMP: True
       AMP_TYPE: pytorch
     WEIGHTS_INIT:
-      PARAMS_FILE: "${SCRATCH}/checkpoints/defaults/resnet_50/resnet50-19c8e357.pth"
+      PARAMS_FILE: "./checkpoints/defaults/resnet_50/resnet50-19c8e357.pth"
       APPEND_PREFIX: "trunk._feature_blocks."
       SKIP_LAYERS: ["num_batches_tracked"]
       STATE_DICT_KEY_NAME: ""
   LOSS:
-    name: simclr_info_nce_loss
-    simclr_info_nce_loss:
+    name: multicrop_simclr_info_nce_loss
+    multicrop_simclr_info_nce_loss:
       temperature: 0.1
       buffer_params:
-        embedding_dim: 256
+        embedding_dim: 4096
+      num_crops: 2
   OPTIMIZER:
       name: sgd
       use_larc: False
